--- a/admin-login.html
+++ b/admin-login.html
@@ -87,7 +87,7 @@
     <div id="errorBox" class="error"></div>
 
     <div class="back-link">
-        <a href="index.html">Back to Cast Login</a>
+        <a href="index.html">Cast member? Click here.</a>
     </div>
 </div>
 
