--- a/main.html
+++ b/main.html
@@ -286,133 +286,153 @@ function closePopup(id) {
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-auth.js";
-    import { 
-        getFirestore, collection, onSnapshot, query, orderBy, limit 
-    } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-auth.js";
+import { 
+    getFirestore, collection, onSnapshot, query, orderBy, limit 
+} from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
 
-    const firebaseConfig = {
-        apiKey: "AIzaSyAecPf2aXR0j1buuDmz9MVrS8aYINs1eCU",
-        authDomain: "grease-practicebase.firebaseapp.com",
-        projectId: "grease-practicebase",
-        storageBucket: "grease-practicebase.firebasestorage.app",
-        messagingSenderId: "696484090016",
-        appId: "1:696484090016:web:4d7bfe336d842ed946b9c5",
-        measurementId: "G-4C78RPXQ99"
-    };
+const firebaseConfig = {
+    apiKey: "AIzaSyAecPf2aXR0j1buuDmz9MVrS8aYINs1eCU",
+    authDomain: "grease-practicebase.firebaseapp.com",
+    projectId: "grease-practicebase",
+    storageBucket: "grease-practicebase.firebasestorage.app",
+    messagingSenderId: "696484090016",
+    appId: "1:696484090016:web:4d7bfe336d842ed946b9c5",
+    measurementId: "G-4C78RPXQ99"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-    onAuthStateChanged(auth, user => {
-        if (!user) window.location.href = "index.html";
+onAuthStateChanged(auth, user => {
+    if (!user) window.location.href = "index.html";
+});
+
+/* -------------------------
+   REHEARSAL SCHEDULE
+-------------------------- */
+const calendarList = document.getElementById('calendarList');
+
+const scheduleQuery = query(
+    collection(db, "announcements"),
+    orderBy("sortTimestamp", "asc")
+);
+
+onSnapshot(scheduleQuery, snapshot => {
+    calendarList.innerHTML = "";
+
+    const today = new Date();
+    today.setHours(0,0,0,0);
+
+    snapshot.forEach(doc => {
+        const data = doc.data();
+        const eventDate = new Date(data.sortTimestamp);
+
+        if (eventDate < today) return;
+
+        const item = document.createElement('div');
+        item.className = 'calendar-day';
+
+        item.innerHTML = `
+            <div class="calendar-date">${data.date}</div>
+            <div class="calendar-field"><strong>${data.title}</strong></div>
+            <div class="calendar-field"><strong>Time:</strong> ${data.time}</div>
+            <div class="calendar-field"><strong>Who:</strong> ${data.who}</div>
+            ${data.extra ? `<div class="calendar-field"><strong>Extra:</strong> ${data.extra}</div>` : ""}
+        `;
+
+        calendarList.appendChild(item);
     });
+});
 
-    /* -------------------------
-       REHEARSAL SCHEDULE (Calendar)
-    -------------------------- */
-    const calendarList = document.getElementById('calendarList');
+/* -------------------------
+   ANNOUNCEMENTS POPUP (Full List)
+-------------------------- */
+const announcementsList = document.getElementById("announcementsList");
 
-    const scheduleQuery = query(
-        collection(db, "announcements"),
-        orderBy("sortTimestamp", "asc")
-    );
+const announcementsQuery = query(
+    collection(db, "siteAnnouncements"),
+    orderBy("createdAt", "desc")
+);
 
-    onSnapshot(scheduleQuery, snapshot => {
-        calendarList.innerHTML = "";
+onSnapshot(announcementsQuery, snapshot => {
+    announcementsList.innerHTML = "";
 
-        const today = new Date();
-        today.setHours(0,0,0,0);
+    if (snapshot.empty) {
+        announcementsList.innerHTML = "<p>No announcements yet.</p>";
+        return;
+    }
 
-        snapshot.forEach(doc => {
-            const data = doc.data();
-            const eventDate = new Date(data.sortTimestamp);
+    snapshot.forEach(doc => {
+        const data = doc.data();
 
-            if (eventDate < today) return;
+        const item = document.createElement("div");
+        item.className = "calendar-day";
 
-            const item = document.createElement('div');
-            item.className = 'calendar-day';
+        item.innerHTML = `
+            <div class="calendar-date">${new Date(data.createdAt).toLocaleDateString()}</div>
+            <div class="calendar-field"><strong>${data.title}</strong></div>
+            <div class="calendar-field">${data.message}</div>
+            <div class="calendar-field" style="opacity:0.7;"><em>Sent by: ${data.sentBy}</em></div>
+        `;
 
-            item.innerHTML = `
-                <div class="calendar-date">${data.date}</div>
-                <div class="calendar-field"><strong>${data.title}</strong></div>
-                <div class="calendar-field"><strong>Time:</strong> ${data.time}</div>
-                <div class="calendar-field"><strong>Who:</strong> ${data.who}</div>
-                ${data.extra ? `<div class="calendar-field"><strong>Extra:</strong> ${data.extra}</div>` : ""}
-            `;
-
-            calendarList.appendChild(item);
-        });
+        announcementsList.appendChild(item);
     });
+});
 
-    /* -------------------------
-       ANNOUNCEMENTS POPUP (Full List)
-    -------------------------- */
-    const announcementsList = document.getElementById("announcementsList");
+/* -------------------------
+   HOMEPAGE NOTICE POPUP (Newest Only)
+-------------------------- */
+const noticeBox = document.getElementById("noticeBox");
+const noticeTitle = document.getElementById("noticeTitle");
+const noticeMessage = document.getElementById("noticeMessage");
 
-    const announcementsQuery = query(
-        collection(db, "siteAnnouncements"),
-        orderBy("createdAt", "desc")
-    );
+let dismissClicks = 0;
+let lastAnnouncementId = null;
 
-    onSnapshot(announcementsQuery, snapshot => {
-        announcementsList.innerHTML = "";
+// Ask for notification permission
+if (Notification.permission === "default") {
+    Notification.requestPermission();
+}
 
-        if (snapshot.empty) {
-            announcementsList.innerHTML = "<p>No announcements yet.</p>";
-            return;
+const latestQuery = query(
+    collection(db, "siteAnnouncements"),
+    orderBy("createdAt", "desc"),
+    limit(1)
+);
+
+onSnapshot(latestQuery, snapshot => {
+    if (snapshot.empty) return;
+
+    const docSnap = snapshot.docs[0];
+    const data = docSnap.data();
+
+    noticeTitle.textContent = data.title || "Announcement";
+    noticeMessage.textContent = data.message || "";
+    noticeBox.style.display = "flex";
+
+    // Only notify if new
+    if (lastAnnouncementId !== docSnap.id) {
+        lastAnnouncementId = docSnap.id;
+
+        if (Notification.permission === "granted") {
+            new Notification("New Announcement", {
+                body: `${data.title} — Sent by ${data.sentBy}`,
+                icon: "https://cdn-icons-png.flaticon.com/512/1827/1827310.png"
+            });
         }
+    }
+});
 
-        snapshot.forEach(doc => {
-            const data = doc.data();
+noticeBox.addEventListener("click", () => {
+    dismissClicks++;
+    if (dismissClicks >= 3) {
+        noticeBox.style.opacity = "0";
+        setTimeout(() => noticeBox.style.display = "none", 300);
+    }
+});
 
-            const item = document.createElement("div");
-            item.className = "calendar-day";
-
-            item.innerHTML = `
-                <div class="calendar-date">${new Date(data.createdAt).toLocaleDateString()}</div>
-                <div class="calendar-field"><strong>${data.title}</strong></div>
-                <div class="calendar-field">${data.message}</div>
-            `;
-
-            announcementsList.appendChild(item);
-        });
-    });
-
-    /* -------------------------
-       HOMEPAGE NOTICE POPUP (Newest Only)
-    -------------------------- */
-    const noticeBox = document.getElementById("noticeBox");
-    const noticeTitle = document.getElementById("noticeTitle");
-    const noticeMessage = document.getElementById("noticeMessage");
-
-    let dismissClicks = 0;
-
-    const latestQuery = query(
-        collection(db, "siteAnnouncements"),
-        orderBy("createdAt", "desc"),
-        limit(1)
-    );
-
-    onSnapshot(latestQuery, snapshot => {
-        if (snapshot.empty) return;
-
-        const data = snapshot.docs[0].data();
-
-        noticeTitle.textContent = data.title || "Announcement";
-        noticeMessage.textContent = data.message || "";
-
-        noticeBox.style.display = "flex";
-    });
-
-    noticeBox.addEventListener("click", () => {
-        dismissClicks++;
-        if (dismissClicks >= 3) {
-            noticeBox.style.opacity = "0";
-            setTimeout(() => noticeBox.style.display = "none", 300);
-        }
-    });
 </script>
 
 </body>
