added psuh noti

--- a/main.html
+++ b/main.html
@@ -309,6 +309,24 @@ onAuthStateChanged(auth, user => {
     if (!user) window.location.href = "index.html";
 });
 
+
+let notificationReady = false;
+
+function enableNotificationsOnce() {
+    if (!notificationReady) {
+        notificationReady = true;
+
+        if (Notification.permission === "default") {
+            Notification.requestPermission();
+        }
+
+        // Remove listener so it only runs once
+        document.removeEventListener("click", enableNotificationsOnce);
+    }
+}
+
+document.addEventListener("click", enableNotificationsOnce);
+
 /* -------------------------
    REHEARSAL SCHEDULE
 -------------------------- */
