--- a/admin.html
+++ b/admin.html
@@ -147,6 +147,9 @@
         <label>Message</label>
         <textarea id="ann_message"></textarea>
 
+        <label>Sent By</label> 
+        <input id="ann_sentby">
+
         <button id="ann_saveBtn">Save</button>
         <button id="ann_clearBtn" style="background:#555;">Clear</button>
 
