--- a/admin.html
+++ b/admin.html
@@ -247,7 +247,7 @@ document.getElementById("sch_saveBtn").onclick = async () => {
             await addDoc(collection(db, "announcements"), {
                 title, date, time, who, extra, sortTimestamp
             });
-            sch_status.textContent = "Created.";
+            sch_status.textContent = "Created. Notifications Sent!";
         }
         sch_status.style.color = "green";
     } catch {
@@ -332,29 +332,33 @@ document.getElementById("ann_saveBtn").onclick = async () => {
         return;
     }
 
-    try {
-        if (editingAnnId) {
-            await updateDoc(doc(db, "siteAnnouncements", editingAnnId), {
-                title,
-                message,
-                sentBy: auth.currentUser.email
-            });
-            ann_status.textContent = "Updated.";
-        } else {
-            await addDoc(collection(db, "siteAnnouncements"), {
-                title,
-                message,
-                createdAt: Date.now(),
-                sentBy: auth.currentUser.email
-            });
-            ann_status.textContent = "Created.";
-        }
-        ann_status.style.color = "green";
-    } catch {
-        ann_status.textContent = "Error saving.";
-        ann_status.style.color = "red";
+   try {
+    const sentBy = document.getElementById("ann_sentby").value.trim();
+
+    if (editingAnnId) {
+        await updateDoc(doc(db, "siteAnnouncements", editingAnnId), {
+            title,
+            message,
+            sentBy
+        });
+        ann_status.textContent = "Updated.";
+    } else {
+        await addDoc(collection(db, "siteAnnouncements"), {
+            title,
+            message,
+            createdAt: Date.now(),
+            sentBy
+        });
+        ann_status.textContent = "Created.";
     }
-};
+
+    ann_status.style.color = "green";
+
+} catch (err) {
+    ann_status.textContent = "Error saving.";
+    ann_status.style.color = "red";
+}
+
 
 const annQuery = query(
     collection(db, "siteAnnouncements"),
