--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Grease Cast Hub</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     :root {
         --grease-red: #da291c;
@@ -455,3 +455,4 @@ noticeBox.addEventListener("click", () => {
 
 </body>
 </html>
+
