--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Grease Login</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body {
         background: #da291c;
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
