--- a/admin-login.html
+++ b/admin-login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Grease Admin Login</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body {
         background: #2a2a2a;
@@ -138,3 +138,4 @@
 
 </body>
 </html>
+
