--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Grease Admin Panel</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     body {
         background: #f4f4f9;
@@ -406,3 +406,4 @@ onSnapshot(annQuery, snapshot => {
 
 </body>
 </html>
+
